--- a/avanzatech_blog/apps/user/templates/user/register.html
+++ b/avanzatech_blog/apps/user/templates/user/register.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h2>Crear Cuenta</h2>
-    <form action="http://127.0.0.1:8000/user/api/register/" method="POST">
+    <form action="http://127.0.0.1:8000/api/user/register/" method="POST">
         {% csrf_token %}
         <label>Email:</label>
         <input type="email" name="email" required><br><br>
